--- a/client/src/app.css
+++ b/client/src/app.css
@@ -19,15 +19,14 @@ body {
   margin: 0;
   display: flex;
   place-items: center;
-  min-width: 320px;
   min-height: 100vh;
   background-color: #242424;
   color: #fff;
 }
 
 #app {
-  max-width: 80vw;
   margin: 0 auto;
+  width: 100%;
   padding: 2rem;
 }
 
